src/test/deca/context/valid/print-float.deca
// Description:
//    Programme minimaliste utilisant print utilisant un float.
//
// Resultats:
//    2.0
//
// Historique:
//    cree le 06/01/2023

{
        print(2.0);
}
