src/test/deca/context/invalid/declare-string.deca
// Description:
//    Déclare un string
//
// Resultats:
//    Erreur contextuelle   
//    Ligne 12 : The type "string" doesn't exist (rule 0.2)
//
// Historique:
//    cree le 06/01/2023

{
    string i;
}